# gds-idea-app-auth

./: .cognito-auth-dev.json.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  auth-config.example.json  auth-config.json.example  dev-mock-user.example.json  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs-preview.yml  pr-checks.yml  release.yml
.opencode/plans/: pypi-index-plan.md
api/authoriser/: index.html
api/lambda-auth/: index.html
cognito_auth/: README.md  pyproject.toml
cognito_auth/src/cognito_auth/: __init__.py  user.py
docs/: dev-mode.md  index.md
docs/api/: authorised-dataframe.md  authoriser.md  authorizer.md  dash-auth.md  exceptions.md  fastapi-auth.md  gradio-auth.md  lambda-auth.md  streamlit-auth.md  user.md
pr-preview/pr-49/: index.html
pr-preview/pr-49/api/authorised-dataframe/: index.html
pr-preview/pr-49/api/streamlit-auth/: index.html
pr-preview/pr-50/: objects.inv
pr-preview/pr-50/api/fastapi-auth/: index.html
pr-preview/pr-50/dev-mode/: index.html
pr-preview/pr-51/api/dash-auth/: index.html
pr-preview/pr-53/api/gradio-auth/: index.html
pr-preview/pr-55/api/exceptions/: index.html
pr-preview/pr-55/api/user/: index.html
pr-preview/pr-62/: 404.html  index.html
pr-preview/pr-62/api/authorised-dataframe/: index.html
pr-preview/pr-62/api/authoriser/: index.html
pr-preview/pr-62/api/dash-auth/: index.html
pr-preview/pr-62/api/exceptions/: index.html
pr-preview/pr-62/api/fastapi-auth/: index.html
pr-preview/pr-62/api/gradio-auth/: index.html
pr-preview/pr-62/api/lambda-auth/: index.html
pr-preview/pr-62/api/streamlit-auth/: index.html
pr-preview/pr-62/api/user/: index.html
pr-preview/pr-62/dev-mode/: index.html
pr-preview/pr-64/: 404.html
search/: search_index.json
src/cognito_auth/: __init__.py  _base_auth.py  authoriser.py  authorizer.py  dash.py  df.py  fastapi.py  gradio.py  guard.py  lambda_auth.py  streamlit.py  token_verifier.py  user.py
src/cognito_auth/helpers/: dash.py  fastapi.py  streamlit.py
tests/cognito_auth/: conftest.py  test_authorised_dataframe.py  test_authoriser.py  test_authorizer.py  test_base_auth.py  test_dash_auth.py  test_fastapi_auth.py  test_gradio_auth.py  test_lambda_auth.py  test_streamlit_auth.py  test_token_verifier.py  test_user.py
