[project]
name = "cognito-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Gillespie", email = "david.gillespie@digital.cabinet-office.gov.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "boto3>=1.35.0",
    "pydantic[email]>=2.0.0",
    "cachetools>=6.2.0",
]

[project.optional-dependencies]
streamlit = ["streamlit>=1.0.0"]
dash = ["dash>=2.0.0", "flask>=2.0.0"]
fastapi = ["fastapi>=0.100.0"]
gradio = ["gradio>=4.0.0"]
all = [
    "streamlit>=1.0.0",
    "dash>=2.0.0",
    "flask>=2.0.0",
    "fastapi>=0.100.0",
    "gradio>=4.0.0",
]

[project.scripts]
cognito-auth = "cognito_auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]


[tool.ruff]
# Target Python version (e.g., Python 3.10)
target-version = "py313"

# Exclude files or directories
exclude = [
    ".git",
    "__pypackages__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# Enable specific rule sets by their prefix
# E (Pycodestyle errors), F (Pyflakes), I (isort), B (Bugbear), UP (Pyupgrade), etc.
select = ["E", "F", "I", "B", "UP", "N", "A", "PT"]

# Configure the 'isort' rule set (I)
[tool.ruff.lint.isort]
force-single-line = false
