[project]
name = "cognito-auth"
description = "Unified authentication and authorisation for AWS Cognito-protected web applications across multiple frameworks"
readme = "README.md"
authors = [
    { name = "David Gillespie", email = "david.gillespie@digital.cabinet-office.gov.uk" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "boto3>=1.35.0",
    "pydantic[email]>=2.0.0",
    "cachetools>=6.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
streamlit = ["streamlit>=1.0.0"]
dash = ["dash>=2.0.0", "flask>=2.0.0"]
fastapi = ["fastapi>=0.100.0"]
gradio = ["gradio>=4.0.0"]
df = ["pandas>=2.2.0"]
all = [
    "streamlit>=1.0.0",
    "dash>=2.0.0",
    "flask>=2.0.0",
    "fastapi>=0.100.0",
    "gradio>=4.0.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "pandas>=2.2.0",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
# Target Python version (e.g., Python 3.10)
target-version = "py312"

# Exclude files or directories
exclude = [
    ".git",
    "__pypackages__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
]
extend-exclude = ["src/cognito_auth/_version.py"]

[tool.ruff.lint]
# Enable specific rule sets by their prefix
# E (Pycodestyle errors), F (Pyflakes), I (isort), B (Bugbear), UP (Pyupgrade), etc.
select = ["E", "F", "I", "B", "UP", "N", "A", "PT"]

# Configure the 'isort' rule set (I)
[tool.ruff.lint.isort]
force-single-line = false

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cognito_auth/_version.py"

[tool.gds-idea-app-kit]
framework = "python"
app_name = "cognito-auth"
tool_version = "0.5.3"

[tool.gds-idea-app-kit.files]
LICENCE = "sha256:21cc325b3181cb748845827425d37ce04b3dc563835bbf50fafbc56a5eb68c48"
".github/CODEOWNERS" = "sha256:464aa53eb8be8c9b61185674b4dabec6cacbafa904aa48b46facdcd9a18e1fc5"
".github/workflows/ci.yml" = "sha256:baed13493483724c4f2cdec0df9d378dfc2f8df8a0f01bfb65a108c9d7af3d29"
".github/dependabot.yml" = "sha256:8472c537c3808394c9200ac7f67e61ce565981583c6f7f381339f1df255fb318"
".pre-commit-config.yaml" = "sha256:376617ea56a3e3b6691e423e33c1faeff299e95205c54208bbd3b3a5c619bd57"
".github/workflows/release.yml" = "sha256:9f0252542002155aa15a6811081f44111a1b9b35129dafee159b85a97071172c"
